Fixed overflow in blockers

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2321,6 +2321,7 @@ form {
 	width: 100%;
 	height: 100%;
     position: relative;
+	overflow: hidden;
 	.info {
 		width: 100%;
 		height: 100%;
